# simple-python-hook-server

./: README.md  app.py  dev.null  hook.py  pyproject.toml  requirements.txt  verify.py
examples/: actions.py  conf.py
src/simple_hook_server/: app.py  verify_hook.py
tests/: tools.py
